// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots do texto impresso por nível (Bárbaro puro, sem subclasse) > nível 1 1`] = `
[
  "#Fúria [__][__]
AB, Res Conc/Cort/Perf; +2 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
]
`;

exports[`snapshots do texto impresso por nível (Bárbaro puro, sem subclasse) > nível 5 1`] = `
[
  "#Fúria [__][__][__]
AB, Res Conc/Cort/Perf; +2 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Ataque Extra",
]
`;

exports[`snapshots do texto impresso por nível (Bárbaro puro, sem subclasse) > nível 10 1`] = `
[
  "#Fúria [__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Ataque Extra",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport",
]
`;

exports[`snapshots do texto impresso por nível (Bárbaro puro, sem subclasse) > nível 15 1`] = `
[
  "#Fúria [__][__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Dura 10 min; termina Inconsciente ou Arm Pesada
+1 uso/DC, todos/DL
> [__] Inic: recupere todos os usos, 1/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Ataque Extra",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
]
`;

exports[`snapshots do texto impresso por nível (Bárbaro puro, sem subclasse) > nível 20 1`] = `
[
  "#Fúria [__][__][__][__][__][__]
AB, Res Conc/Cort/Perf; +4 de dano
Vant testes/Salv
Dura 10 min; termina Inconsciente ou Arm Pesada
+1 uso/DC, todos/DL
> [__] Inic: recupere todos os usos, 1/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Ataque Extra",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +2d10 e escolha 2:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Força Indomável
Teste/Salv FOR < FOR: use FOR",
]
`;
